tests/harness/errors/162_unclosed_paren.eu
# Error test: missing closing paren in a parenthesised expression
# The parser recovers at the enclosing block boundary.
x: { y: (a + b  z: 4 }
RESULT: x
